--- a/AuctionWebApplication/Views/Auction/Details.cshtml
+++ b/AuctionWebApplication/Views/Auction/Details.cshtml
@@ -1,61 +1,17 @@
-﻿@model AuctionItemModel
+﻿@model AuctionWebApplication.Models.AuctionItemModel
 
-<h2>Details</h2>
+<h2>Details for item with number @Model.ItemNumber</h2>
 
-@using (Html.BeginForm())
-{
-    <dl class="dl-horizontal">
-            <legend>AuctionItem</legend>
-
-            <dt>
-                @Html.LabelFor(model => model.BidCustomName)
-            </dt>
-            <dd>
-                @Html.TextBoxFor(model => model.BidCustomName)
-            </dd>
-
-            <dt>
-                @Html.LabelFor(model => model.BidCustomPhone)
-            </dt>
-            <dd>
-                @Html.TextBoxFor(model => model.BidCustomPhone)
-            </dd>
-
-            <dt>
-                @Html.LabelFor(model => model.BidPrice)
-            </dt>
-            <dd>
-                @Html.TextBoxFor(model => model.BidPrice)
-            </dd>
-
-            <dt>
-                @Html.LabelFor(model => model.BidTimeStamp)
-            </dt>
-            <dd>
-                @Model.BidTimeStamp
-            </dd>
-
-            <dt>
-                @Html.LabelFor(model => model.ItemDescription)
-            </dt>
-            <dd>
-                @Model.ItemDescription
-            </dd>
-
-            <dt>
-                @Html.LabelFor(model => model.ItemNumber)
-            </dt>
-            <dd>
-                @Model.ItemNumber
-            </dd>
-
-            <dt>
-                @Html.LabelFor(model => model.RatingPrice)
-            </dt>
-            <dd>
-                @Model.RatingPrice
-            </dd>
-
-            <input type="submit" value="Save" />
-    </dl>
-}
+<form asp-controller="Auction" asp-action="Details" method="post">
+    Name: <input asp-for="BidCustomName" /> <br />
+    <span asp-validation-for="BidCustomName"></span><br />
+    Phone: <input asp-for="BidCustomPhone" /> <br />
+    <span asp-validation-for="BidCustomPhone"></span><br />
+    Price: <input asp-for="BidPrice" /> <br />
+    <span asp-validation-for="BidPrice"></span><br />
+    <label asp-for="BidTimeStamp"></label>: @Model.BidTimeStamp <br />
+    <label asp-for="ItemDescription"></label>: @Model.ItemDescription <br />
+    <label asp-for="ItemNumber"></label>: @Model.ItemNumber <br />
+    <label asp-for="RatingPrice"></label>: @Model.RatingPrice <br />
+    <button type="submit">Save</button>
+</form>
