--- a/AuctionWebApplication/Views/Auction/MyAuctions.cshtml
+++ b/AuctionWebApplication/Views/Auction/MyAuctions.cshtml
@@ -1,40 +1,30 @@
 ﻿@model List<AuctionItemModel>
 
-<h2>Auction</h2>
+<h2>My Auctions</h2>
 <table style="width:100%">
     <tr>
-        <th>BidCustomName</th>
-        <th>BidCustomPhone</th>
         <th>BidPrice</th>
         <th>BidTimeStamp</th>
         <th>ItemDescription</th>
         <th>ItemNumber</th>
-        <th>RatingPrice</th>
         <th></th>
     </tr>
     @{
         foreach (AuctionItemModel item in Model)
         {
             <tr>
-                <td>@item.BidCustomName</td>
-                <td>@item.BidCustomPhone</td>
                 <td>@item.BidPrice</td>
                 <td>@item.BidTimeStamp</td>
                 <td>@item.ItemDescription</td>
                 <td>@item.ItemNumber</td>
-                <td>@item.RatingPrice</td>
                 <td>
                     <a>
-                        @Html.ActionLink("Select", "Details", "Auction", new {itemNumber = item.ItemNumber})
+                        @Html.ActionLink("Select", "Details", "Auction", new { itemNumber = item.ItemNumber })
                     </a>
                 </td>
             </tr>
         }
     }
 </table>
-
-<br/>
-<form asp-controller="Auction" asp-action="MyAuctions" method="get">
-    <label>Name</label> <input type="text" name="name"/> <br />
-    <button type="submit">My Auctions</button>
-</form>
+<br />
+<a>@Html.ActionLink("Back", "Index", "Auction")</a>
